[package]
name = "deltasched"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_as = "0.0.1"
serde_with = "3.4.0"
serde_yaml = "0.9.25"
