[package]
name = "deltasched"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

#[[bin]]
#name = "main"
path = "src/main.rs"

[libmodel]
name = "model"
path = "src/model.rs"

[libprinter]
name = "printer"
path = "src/printer.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.25"
wasm-bindgen = "0.2"
